Fix compilation issue and auto formatting
Signed-off-by: Liyun Xiu <xiliyun@amazon.com>